# signal-platform

./: .gitignore  LICENSE  README.md  platform.yaml  pyproject.toml
.gitea/workflows/: ci.yml
deployment/launchd/: com.openclaw.signal-platform.plist
docs/runbooks/: signal-platform.md
openspec/changes/signal-platform-p1/: build-guide.md  design.md  proposal.md  tasks.md
openspec/changes/signal-platform-p1/specs/: composite-scorer.md  factor-ic-engine.md  observability-contract.md  universe-fetcher.md  walk-forward-validator.md
src/signal_platform/: __init__.py  cli.py  logging.py  metrics.py  pipeline.py  service.py
src/signal_platform/data/: __init__.py  ohlcv.py  sp500_snapshot.txt  universe.py
src/signal_platform/emit/: __init__.py  watchlist.py
src/signal_platform/factors/: __init__.py
src/signal_platform/signals/: __init__.py  ic_engine.py  scorer.py  walk_forward.py
tests/: test_factors.py  test_ic_engine.py  test_metrics.py  test_ohlcv.py  test_pipeline.py  test_scorer.py  test_service.py  test_smoke.py  test_universe.py  test_universe_qqq.py  test_walk_forward.py  test_watchlist_emit.py
